argocd/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test1-deployment
  labels:
    app: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: sg-kube-test.kr.ncr.ntruss.com/app1:445f5fb
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 30"]
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: test1-service
spec:
  type: NodePort
  selector:
    app: test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portname-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing # ALB를 외부에 노출
    alb.ingress.kubernetes.io/target-type: ip         # Target 유형을 IP로 설정
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]' # ALB에서 HTTP 포트 노출
    alb.ingress.kubernetes.io/group.name: "test-group" # ALB 그룹 이름 지정
spec:
  ingressClassName: alb
  rules:
  - host: test.sgkim.site # 외부에서 접근할 도메인 이름
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test1-service
            port:
              number: 80
